# openfamiliar

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secretlintrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  clippy.toml  package.json  plan.txt  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.agents/skills/openfamiliar-codex-adapter/: SKILL.md
.agents/skills/openfamiliar-codex-adapter/agents/: openai.yaml
.agents/skills/openfamiliar-pixel-art/: SKILL.md
.agents/skills/openfamiliar-pixel-art/agents/: openai.yaml
.agents/skills/openfamiliar-release/: SKILL.md
.agents/skills/openfamiliar-release/agents/: openai.yaml
.agents/skills/openfamiliar-windows-ui/: SKILL.md
.agents/skills/openfamiliar-windows-ui/agents/: openai.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  windows-package.yml
adapters/antigravity/: README.md  build.js  package.json  test.js
adapters/antigravity/src/: index.ts
adapters/codex/: README.md  build.js  package.json  test.js
adapters/codex/src/: index.ts
adapters/gemini/: README.md  build.js  package.json  test.js
adapters/gemini-cli/: README.md  build.js  package.json  test.js
adapters/gemini-cli/src/: index.ts
adapters/gemini/src/: index.ts
adapters/ollama/: README.md  build.js  package.json  test.js
adapters/ollama/src/: index.ts
adapters/openai-compatible/: README.md  build.js  package.json  test.js
adapters/openai-compatible/src/: index.ts
adapters/opencode/: README.md  build.js  package.json  test.js
adapters/opencode/src/: index.ts
apps/creator-studio/: index.html  package.json  tsconfig.json  vite.config.ts
apps/creator-studio/src/: App.tsx  main.tsx
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/domain/: mod.rs
apps/desktop/src-tauri/src/services/: app_paths.rs  codex_process.rs  logging.rs  mod.rs  monitor_position.rs  preferences.rs
apps/desktop/src-tauri/tests/fixtures/: fake-codex.ps1
apps/desktop/src/features/mascot/: MascotSprite.tsx  useMascotRuntime.ts
apps/desktop/src/features/quick-ask/: AnswerView.tsx  oneShotMachine.test.ts  oneShotMachine.ts
apps/desktop/src/lib/: backend.ts  states.test.ts  states.ts  types.ts
apps/desktop/src/windows/: MascotWindow.tsx  SettingsWindow.tsx
apps/vscode-extension/: README.md  package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts
crates/familiar-agent-bridge/: Cargo.toml
crates/familiar-agent-bridge/src/: lib.rs
crates/familiar-context/: Cargo.toml
crates/familiar-context/src/: lib.rs
crates/familiar-core/: Cargo.toml
crates/familiar-core/src/: lib.rs  providers.rs
crates/familiar-mcp/: Cargo.toml
crates/familiar-mcp/src/: lib.rs
crates/familiar-permissions/: Cargo.toml
crates/familiar-permissions/src/: lib.rs
crates/familiar-storage/: Cargo.toml
crates/familiar-storage/src/: lib.rs
docs/: HUMAN_FOLLOWUP_MANUAL.md
docs/adr/: ADR-001-desktop-framework.md  ADR-002-mascot-rendering-format.md  ADR-003-plugin-isolation.md  ADR-004-provider-abstraction.md  ADR-005-secure-credential-storage.md  ADR-006-workspace-permission-model.md  ADR-007-local-ipc-and-mcp-transport.md  ADR-008-licensing-strategy.md  ADR-009-windows-one-shot-mvp.md  README.md
docs/agent-playbooks/: codex-cli-adapter.md  pixel-art-pipeline.md  release-checklist.md  security-boundaries.md  windows-desktop-ux.md
docs/architecture/: overview.md
docs/guides/: create-a-mascot.md  dev-windows.md  providers.md  share-diagnostics.md  windows-code-signing.md
docs/legal/: allowed-licenses.md  dependency-licenses.json  trademarks.md
docs/planning/: initial-vision.md
docs/reviews/: retrospective-2026-07-14-mascot-public-beta.md
docs/security/: sensitive-paths.md  threat-model.md
docs/testing/: WINDOWS_MVP_SMOKE_TEST.md
examples/demo-dotnet/: Program.cs.txt  README.md
examples/demo-terraform/: README.md  main.tf
examples/demo-typescript/: README.md  package.json
examples/demo-typescript/src/: hello.ts
mascots/blank-template/: README.md  familiar.json  personality.md
mascots/blank-template/assets/: approval.webp.txt  error.webp.txt  idle.webp.txt  success.webp.txt  thinking.webp.txt  working.webp.txt
mascots/perrito-tech/: LICENSE  NOTICE  README.md  familiar.json  palette-variants.json  personality.md
mascots/perrito-tech/assets/: approval.webp.txt  error.webp.txt  idle.webp.txt  success.webp.txt  thinking.webp.txt  working.webp.txt
scripts/: bootstrap.ps1  dev-desktop.ps1  test-all.ps1
scripts/assets/: build_mascot_variants.py  build_perrito_icons.py  normalize_mascot_sheet.py  validate_mascot_sheet.py
scripts/assets/tests/: test_mascot_variants.py  test_validate_mascot_sheet.py
scripts/legal/: Export-DependencyLicenses.ps1
scripts/release/: Test-WindowsArtifacts.ps1
tools/familiar-cli/: Cargo.toml  package.json
tools/familiar-cli/src/: main.rs
