[workspace]
resolver = "2"
members = [
  "crates/familiar-core",
  "crates/familiar-context",
  "crates/familiar-permissions",
  "crates/familiar-storage",
  "crates/familiar-agent-bridge",
  "crates/familiar-mcp",
  "apps/desktop/src-tauri",
  "tools/familiar-cli",
]
default-members = [
  "crates/familiar-core",
  "crates/familiar-context",
  "crates/familiar-permissions",
  "crates/familiar-storage",
  "crates/familiar-agent-bridge",
  "crates/familiar-mcp",
  "tools/familiar-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["georgiegozz"]
repository = "https://github.com/georgiegozz/openfamiliar"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.11.1", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
walkdir = "2.5.0"
regex = "1.11.1"
toml = "0.8.19"
jsonschema = "0.28.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
directories = "6.0.0"
async-trait = "0.1.85"
futures = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1.9.0"
clap = { version = "4.5.26", features = ["derive"] }
ignore = "0.4.23"
path-clean = "1.0.1"
mime_guess = "2.0.5"
zip = "2.2.2"
tempfile = "3.15.0"
keyring = "3.6.1"
eventsource-stream = "0.2.3"
parking_lot = "0.12.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
