[package]
name = "familiar-agent-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent CLI bridge protocol for OpenFamiliar"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
familiar-permissions = { path = "../familiar-permissions" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }