[package]
name = "familiar-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Read-only workspace context for OpenFamiliar"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
path-clean = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }