[package]
name = "familiar-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local MCP server surface for OpenFamiliar"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
familiar-core = { path = "../familiar-core" }
