[package]
name = "familiar-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite storage, audit log, and secure config for OpenFamiliar"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
keyring = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }