[package]
name = "familiar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OpenFamiliar CLI (familiar)"

[[bin]]
name = "familiar"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
zip = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
