[package]
name = "openfamiliar-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OpenFamiliar Desktop (Tauri)"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-autostart = "=2.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
directories = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lib]
name = "openfamiliar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = { workspace = true }
